2010-06-18 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m83-1:
	- new snapshot
	- apply fix from http://www.openoffice.org/issues/show_bug.cgi?id=111141
	  for broken i686 internal cppunit

2010-06-13 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m82-1:
	- new snapshot
	- build still broken

2010-06-10 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m81-1:
	- new snapshot
	- build broken http://www.openoffice.org/issues/show_bug.cgi?id=111990

2010-06-01 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m80-1:
	- new snapshot
	- rework deps/optdeps taken from -beta pkg
	- use system libmythes, redland, cppunint, unixodbc
	- add junit makedep
	- build broken

2010-04-24 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m77-1:
	- new snapshot
	- fall back to internal saxon - see
	  http://qa.openoffice.org/issues/show_bug.cgi?id=110136
	- add gcc4.5 fixes
	- add a buildfix
	- use system graphite for i686 again
	- use internal cppunit for both architectures

2010-04-12 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m76-1:
	- new snapshot
	- use xz compression for source
	
2010-03-21 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m75-2:
	use internal redland/rasqal/raptor

2010-03-16 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m75-1:
	- new snapshot

2010-02-03 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m71-1:
	- new snapshot

2010-01-25 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m70-1:
	- new snapshot
	- create tarball in its own function

2010-01-22 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m69-2:
	- rebuild for redland/libjpeg8/libpng1.4/xulrunner1.9.2

2010-01-14 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m69-1:
        - new snapshot
	- gtk2 is a needed runtime dep, #17728

2010-01-01 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m68-1: