@@ -4,7 +4,7 @@
 
 pkgbase="openoffice-base-devel"
 pkgname=('openoffice-base-devel' 'openoffice-sdk-devel')
-_OO_milestone=DEV300_m83
+_OO_milestone=DEV300_m84
 pkgver=3.3_${_OO_milestone/DEV/dev}
 pkgrel=1
 arch=('i686' 'x86_64')
@@ -31,7 +31,6 @@ source=(${_OO_milestone}.tar.xz
 	buildfix_FormulaMissingHeader.diff
 	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/cppu-lbnames-enable-gcc-4.5.diff
 	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/sal-cpprt-gcc-4.5-workaround.diff
-	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/fix-system-mythes-for-mythes-1.2.diff
 	cppunit_gcc45.diff
 	openoffice.profile)
 options=('!distcc' '!ccache' '!makeflags')
@@ -67,23 +66,20 @@ build() {
 	export NO_HIDS=true
 
 	# build fixes
-	patch -Np0 -i ${srcdir}/buildfix-gcc44.diff || return 1
-	patch -Np0 -i ${srcdir}/buildfix_FormulaMissingHeader.diff || return 1
+	patch -Np0 -i ${srcdir}/buildfix-gcc44.diff
+	patch -Np0 -i ${srcdir}/buildfix_FormulaMissingHeader.diff
 	# gcc4.5 fix
-	patch -Np0 -i ${srcdir}/cppu-lbnames-enable-gcc-4.5.diff || return 1
-	patch -Np0 -i ${srcdir}/sal-cpprt-gcc-4.5-workaround.diff || return 1
-
-	# allow build with system mythes
-	patch -Np0 -i ${srcdir}/fix-system-mythes-for-mythes-1.2.diff || return 1
+	patch -Np0 -i ${srcdir}/cppu-lbnames-enable-gcc-4.5.diff
+	patch -Np0 -i ${srcdir}/sal-cpprt-gcc-4.5-workaround.diff
 
 	# allows soffice to find the user's firefox profile so that it can read
 	# its digital certificates. Nss stores digital certificates in your mozilla firefox profile. 
-	patch -Np0 -i ${srcdir}/soffice-detect-mozilla-certificates.diff || return 1
+	patch -Np0 -i ${srcdir}/soffice-detect-mozilla-certificates.diff
 	
 	# remove the startup wizard
-	patch -Np0 -i ${srcdir}/default-no-startup-wizard.diff || return 1
+	patch -Np0 -i ${srcdir}/default-no-startup-wizard.diff
 	# enables the default system-file-picker in case we have that built
-	patch -Np0 -i ${srcdir}/default-system-fpicker.diff || return 1
+	patch -Np0 -i ${srcdir}/default-system-fpicker.diff
 
 	if [ "$CARCH" = "x86_64" ]; then
 	   EXTRAOPTS="--without-stlport"
@@ -98,7 +94,7 @@ build() {
 	cd ${srcdir}/${_OO_milestone}
 
 	# needed to build the OO-SDK
-	mv ${srcdir}/unowinreg.dll external/unowinreg || return 1
+	mv ${srcdir}/unowinreg.dll external/unowinreg
 	
 	# export C(XX)FLAGS
 	# http://www.openoffice.org/issues/show_bug.cgi?id=103205
@@ -106,7 +102,7 @@ build() {
 	unset CXXFLAGS
 
 	# Need to recreate the configure script because of patches
-	autoreconf -v || return 1
+	autoreconf -v
 
 	./configure --with-build-version="${pkgver} ArchLinux build-${pkgrel} (${_OO_milestone})" \
 	--with-vendor="ArchLinux"\
@@ -147,6 +143,7 @@ build() {
 	--without-nas\
 	--without-ppds\
 	--without-system-agg\
+	--without-system-mdds\
 	--with-system-cppunit\
 	--with-system-redland\
 	--without-system-saxon\
@@ -165,7 +162,7 @@ build() {
 	--with-lucene-analyzers-jar=/usr/share/java/lucene-analyzers.jar\
 	--with-use-shell=bash\
 	--with-external-tar=${SRCDEST}\
-	 $EXTRAOPTS || return 1
+	 $EXTRAOPTS
 
 # see http://qa.openoffice.org/issues/show_bug.cgi?id=110136
 #	--with-saxon-jar=/usr/share/java/saxon/saxon9he.jar\
@@ -185,10 +182,10 @@ build() {
 	fi
 
 	# Build dmake utility
-	./bootstrap || return 1
+	./bootstrap
 
 	cd instsetoo_native
-	build.pl -P${SMP} ${MAXMODULESFLAG} ${MAXPROCESSESFLAG} --dlv_switch -link --all || return 1
+	build.pl -P${SMP} ${MAXMODULESFLAG} ${MAXPROCESSESFLAG} --dlv_switch -link --all
 }
 
 package_openoffice-base-devel() {
@@ -233,34 +230,34 @@ package_openoffice-base-devel() {
 	rmdir ${pkgdir}/opt
 
         ## Step 1 
-        cd ${pkgdir}/usr/lib/openoffice.org || return 1
-        mv ure/ basis3.3/ || return 1
-        cd basis3.3 || return 1
-        rm ure-link && mv ure ure-link || return 1
+        cd ${pkgdir}/usr/lib/openoffice.org
+        mv ure/ basis3.3/
+        cd basis3.3
+        rm ure-link && mv ure ure-link
         ## Step 2
-        cd ${pkgdir}/usr/lib/ || return 1
-        mv openoffice.org/basis3.3/ openoffice.org3/ || return 1
-        cd openoffice.org3/ || return 1
-        rm basis-link && mv basis3.3 basis-link || return 1
+        cd ${pkgdir}/usr/lib/
+        mv openoffice.org/basis3.3/ openoffice.org3/
+        cd openoffice.org3/
+        rm basis-link && mv basis3.3 basis-link
         ## Step 3        
-        cd ${pkgdir}/usr/lib/ || return 1
-        rmdir ${pkgdir}/usr/lib/openoffice.org || return 1
-        mv openoffice.org3 openoffice || return 1
+        cd ${pkgdir}/usr/lib/
+        rmdir ${pkgdir}/usr/lib/openoffice.org
+        mv openoffice.org3 openoffice
 
        # install all built dictionaries from source tree
        pushd ${srcdir}/${_OO_milestone}/dictionaries/unxlng?6.pro/bin
        for i in `ls -1 dict-??.oxt`; do
-         install -D -m644 $i ${pkgdir}/usr/lib/openoffice/share/extension/install/$i || return 1
+         install -D -m644 $i ${pkgdir}/usr/lib/openoffice/share/extension/install/$i
        done
        popd
        
        # install extensions
        pushd ${srcdir}/${_OO_milestone}/solver/300/unxlng?6.pro/bin
-         install -D -m644 report-builder.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/report-builder.oxt || return 1
-	 install -D -m644 swext/wiki-publisher.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/wiki-publisher.oxt || return 1
-	 install -D -m644 minimizer/presentation-minimizer.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/presentation-minimizer.oxt || return 1
-	 install -D -m644 presenter/presenter-screen.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/presenter-screen.oxt || return 1
-	 install -D -m644 pdfimport/pdfimport.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/pdfimport.oxt || return 1
+         install -D -m644 report-builder.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/report-builder.oxt
+	 install -D -m644 swext/wiki-publisher.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/wiki-publisher.oxt
+	 install -D -m644 minimizer/presentation-minimizer.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/presentation-minimizer.oxt
+	 install -D -m644 presenter/presenter-screen.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/presenter-screen.oxt
+	 install -D -m644 pdfimport/pdfimport.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/pdfimport.oxt
        popd
 
 
@@ -271,18 +268,18 @@ package_openoffice-base-devel() {
 	# install shortcuts
 	mv ${pkgdir}/usr/lib/openoffice/share/xdg/*.desktop  ${pkgdir}/usr/share/applications
 	# add startcenter desktop file
-	install -D -m644 ${srcdir}/startcenter.desktop ${pkgdir}/usr/share/applications/startcenter.desktop || return 1
+	install -D -m644 ${srcdir}/startcenter.desktop ${pkgdir}/usr/share/applications/startcenter.desktop
 
 	cd ${pkgdir}/usr/share/applications
-	sed -i -e 's|Exec=openoffice.org3|Exec=/usr/bin/soffice|g' *.desktop || return 1
-	sed -i -e 's|Exec=/usr/bin/soffice-printeradmin|Exec=/usr/bin/spadmin|g' printeradmin.desktop || return 1
+	sed -i -e 's|Exec=openoffice.org3|Exec=/usr/bin/soffice|g' *.desktop
+	sed -i -e 's|Exec=/usr/bin/soffice-printeradmin|Exec=/usr/bin/spadmin|g' printeradmin.desktop
 	# fix exec commands in shortcuts for Xfce menu
-	sed -i -e 's|base %U|base|g' base.desktop || return 1
-	sed -i -e 's|calc %U|calc|g' calc.desktop || return 1
-	sed -i -e 's|draw %U|draw|g' draw.desktop || return 1
-	sed -i -e 's|impress %U|impress|g' impress.desktop || return 1
-	sed -i -e 's|math %U|math|g' math.desktop || return 1
-	sed -i -e 's|writer %U|writer|g' writer.desktop || return 1
+	sed -i -e 's|base %U|base|g' base.desktop
+	sed -i -e 's|calc %U|calc|g' calc.desktop
+	sed -i -e 's|draw %U|draw|g' draw.desktop
+	sed -i -e 's|impress %U|impress|g' impress.desktop
+	sed -i -e 's|math %U|math|g' math.desktop
+	sed -i -e 's|writer %U|writer|g' writer.desktop
 	# remove quickstarter, we disabled it above
 	rm -rf ${pkgdir}/usr/share/applications/qstart.desktop
 	# fix icons in desktop files
@@ -322,15 +319,15 @@ package_openoffice-base-devel() {
 	for i in `find ${pkgdir}/usr/share/icons -name '*.png'`  ; do  mv $i `dirname $i`/dev-`basename $i` ; done ;
 	
 	cd ${pkgdir}/usr/share/applications/
-	sed -i -e 's|Icon=|Icon=dev-|g' ${pkgdir}/usr/share/applications/*.desktop || return 1
-	sed -i -e 's|OpenOffice\.org\ 3\.3|OpenOffice\.org\ devel|g' ${pkgdir}/usr/share/applications/*.desktop || return 1
+	sed -i -e 's|Icon=|Icon=dev-|g' ${pkgdir}/usr/share/applications/*.desktop
+	sed -i -e 's|OpenOffice\.org\ 3\.3|OpenOffice\.org\ devel|g' ${pkgdir}/usr/share/applications/*.desktop
 
 	cd ${pkgdir}/usr/lib/openoffice-dev/program/
 	ln -sf /usr/lib/openoffice-dev/program/soffice.bin soffice-dev.bin
 	
        # set desktop variable to force gtk/gnome vcl usage
        install -m755 -d ${pkgdir}/etc/profile.d
-       install -m755 ${srcdir}/openoffice.profile ${pkgdir}/etc/profile.d/openoffice-devel.sh || return 1
+       install -m755 ${srcdir}/openoffice.profile ${pkgdir}/etc/profile.d/openoffice-devel.sh
 
 	# link the mozilla-plugin
 	mkdir -p ${pkgdir}/usr/lib/mozilla/plugins/
@@ -376,11 +373,11 @@ package_openoffice-sdk-devel() {
         chmod 755 $file
 	done
 
-	cd ${pkgdir}/usr/lib/ || return 1
-	mv openoffice.org openoffice || return 1
+	cd ${pkgdir}/usr/lib/
+	mv openoffice.org openoffice
 
- 	cd ${pkgdir}/usr/lib/openoffice/ || return 1
-	mv basis3.3 basis-link || return 1
+ 	cd ${pkgdir}/usr/lib/openoffice/
+	mv basis3.3 basis-link
 
 	# fix ownership and permissions
 	chown root.root -R ${pkgdir}/
