@@ -1,3 +1,10 @@
+2010-0717 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.3_dev300_m84-1:
+	- disable PYTHONPATH changes in profile file
+	- remove system-mythes patch that went upstream
+	- explicitly point to internal mdds
+	
 2010-06-18 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.3_dev300_m83-1:
